--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "@react-three/drei": "^9.109.2",
+    "@react-three/fiber": "^8.16.8",
     "axios": "^1.4.0",
     "framer-motion": "^7.6.8",
     "gh-pages": "^6.3.0",
@@ -19,7 +21,8 @@
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "three": "^0.162.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
